kubernetes/minikube/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cp-ingress
  labels:
    app: cp
spec:
  ingressClassName: nginx
  rules:
    - host: slack-metrics.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: slack-metrics-service
                port:
                  number: 80
    - host: nginx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
